--- a/Docs/Tesi/JSF.tex
+++ b/Docs/Tesi/JSF.tex
@@ -48,7 +48,7 @@ L'architettura di JSF (illustrata in Figura \ref{jsf_arch} ) segue il classico s
 
 Il livello \textit{controller} di JSF fa un uso intensivo dei \textsl{bean}. Un bean è un oggetto Java gestito dal framework e non in maniera diretta dal programmatore.\\
 Esistono vari tipi di bean; quelli a cui si può accedere direttamente da una pagina JSF sono detti \textit{managed bean}. Per essere tale, un bean deve avere un nome ed uno \textit{scope}, ossia un contesto in cui il bean è \textquoteleft visibile\textquoteright{} ed utilizzabile dall'applicazione. \\
-Per maggiori dettagli, si rimanda al capitolo INSERIRE RIFERIMENTO A CDI QUI.
+Per maggiori dettagli, si rimanda al capitolo \ref{cdi}.
 
 
 \subsection{Funzionamento}
