--- a/Docs/Tesi/creazione_interfaccia.tex
+++ b/Docs/Tesi/creazione_interfaccia.tex
@@ -10,6 +10,6 @@ Il processo di creazione di un entità del modello coinvolge vari componenti:
 
 \subsection{Livello presentazione}
 
-Quando una schermata di creazione viene visualizzata, per prima cosa viene istanziato dal \textit{container} il controllore che si occupa della creazione dell'entità, il quale a sua volta inizia una conversazione e crea l'oggetto che conterrà i valori inseriti tramite interfaccia dall'utente.\\
-Graficamente le pagine web di questo tipo sono costituite semplicemente da alcuni campi di input in cui inserire i dati, inseriti all'interno di un wizard se il numero di valori da inserire è troppo elevato e renderebbe troppo carica un'unica schermata; in questo caso, si rende a volte necessario un bean di presentazione per controllare il flusso del wizard. Normalmente, i form non sono inseriti direttamente nella pagina; piuttosto, si utilizzano vari componenti personalizzati, i quali vengono inclusi nella pagina per ottenere l'effetto desiderato. In questo modo, lo stesso componente può essere utilizzato in più contesti. Questo è reso possibile grazie al tag \lstinline{composite} di JSF, che consente di creare componenti ed inserirle all'interno di un namespace personalizzato.\\
+Quando una schermata di creazione viene visualizzata, per prima cosa viene istanziato dal \textit{container} il controllore che si occupa della creazione dell'entità, il quale a sua volta inizia una conversazione e crea l'oggetto che conterrà i valori immessi tramite interfaccia dall'utente.\\
+Graficamente, le pagine web di questo tipo sono costituite semplicemente da alcuni campi di input, inseriti all'interno di un wizard se il numero di valori da inserire è troppo elevato e renderebbe troppo carica un'unica schermata; in questo caso, si rende a volte necessario un bean di presentazione per controllare il flusso del wizard. Normalmente, i form non sono inseriti direttamente nella pagina; piuttosto, si utilizzano vari componenti personalizzati, i quali vengono inclusi nella pagina per ottenere l'effetto desiderato. In questo modo, lo stesso componente può essere utilizzato in più contesti. Questo è reso possibile grazie al tag \lstinline{composite} di JSF, che consente di creare componenti ed inserirle all'interno di un namespace personalizzato.\\
 La pagina è poi ovviamente corredata di pulsanti per salvare i dati inseriti o per tornare alla vista precedente ignorando i cambiamento. Nel caso in cui l'utente decida di salvare le modifiche effettuate, il controllore provvede ad aggiornare il database per mezzo del DAO opportuno. In entrambi i casi, la conversazione viene chiusa e si ritorna alla schermata precedente.
