--- a/Docs/Tesi/filler.tex
+++ b/Docs/Tesi/filler.tex
@@ -1,4 +1,4 @@
-Come già spiegato precedentemente, durante la creazione di una convenzione/contributo deve essere inserita una suddivisione dell'importo concordato, chiamata \textsl{ripartizione}. La ripartizione, in generale, non è totalmente libera: alcuni valori possono essere immessi e sulla base di questi ne vengono calcolati altri secondo opportuni schemi. Ad esempio, attualmente in una convenzione va al \textsl{Fondo Comune di Ateneo} il 2.5\% dell'ammontare totale della convenzione. \\
+Durante la creazione di una convenzione/contributo deve essere inserita una suddivisione dell'importo concordato, chiamata \textsl{ripartizione}. La ripartizione, in generale, non è totalmente libera: possono essere immessi solo alcuni valori e, sulla base di questi, ne vengono calcolati altri secondo opportuni schemi. Ad esempio, attualmente va al \textsl{Fondo Comune di Ateneo} il 2.5\% dell'ammontare totale della convenzione. \\
 Il meccanismo in base al quale calcolare le quote \textquoteleft derivate\textquoteright{} a partire da quelle \textquoteleft libere\textquoteright{} può subire delle modifiche nel tempo. Per questo motivo, si è scelto di adottare il pattern \textsl{Strategy} per consentire di cambiare in un secondo momento l'algoritmo da utilizzare.\\
 
 \subsubsection{Il pattern \textsl{Strategy}}
@@ -29,7 +29,7 @@ Le percentuali sulla base delle quali eseguire il calcolo sono definibili attrav
 
 \paragraph{}
 In realtà, in questa cartella non sono presenti file di configurazione, ma altre sotto-cartelle. Infatti, è possibile specificare aliquote diverse per ogni dipartimento, ognuno dei quali ha la propria directory, riconoscibile dall'identificativo del dipartimento stesso. Questo però ha effetti anche sul codice: non è possibile utilizzare lo stesso filler per tutti i dipartimenti. È questo il motivo per cui è stato utilizzato il pattern \textsl{Abstract factory} per incapsulare la responsabilità di istanziare il filler appropriato. Quando è necessario ottenere un filler per un dato contratto, è sufficiente chiamare il metodo \lstinline{getFiller} della factory passandogli il dipartimento del docente che lo ha stipulato. \\
-Chiaramente, anche per la factory è necessario stabilire quale implementazione utilizzare, essendo questa legata al filler da produrre. Il meccanismo è sempre lo stesso: non si fa riferimento alla classe concreta, ma a quella di base. Se si dovesse cambiare tipo di filler, è sufficiente implementare la relativa factory ed aggiornare il resto di conseguenza. L'aggiornamento è inoltre molto più semplice nel caso della factory, perché esse non sono entità di JPA (ossia, non sono annotate \lstinline{@Entity}), ma sono bean di CDI. Questo consente di utilizzare le \textit{alternatives} (si veda il capitolo \ref{cdi} per maggiori dettagli) e quindi basta modificare il file \path{bean.xml} specificando il bean da utilizzare.\\
+Anche per la factory è necessario stabilire quale implementazione utilizzare, essendo questa legata al filler da produrre. Il meccanismo è sempre lo stesso: non si fa riferimento alla classe concreta, ma a quella di base. Se si dovesse cambiare tipo di filler, è sufficiente implementare la relativa factory ed aggiornare il resto di conseguenza. L'aggiornamento è inoltre molto più semplice nel caso della factory, perché esse non sono entità di JPA (ossia, non sono annotate \lstinline{@Entity}), ma sono bean di CDI. Questo consente di utilizzare le \textit{alternatives} (si veda il capitolo \ref{cdi} per maggiori dettagli) e quindi basta modificare il file \path{bean.xml} specificando il bean da utilizzare.\\
 
 \paragraph{}
 Le cose sono in realtà leggermente più complicate di così. Infatti, bisogna tener conto che le variazione delle quote o del metodo di calcolo stesso non devono essere retroattive. Ad esempio, se nel 2013 al Fondo Comune di Ateneo spetta il 2.5\% del totale della convenzione, mentre nel 2014 l'1\% sulla quota relativa al personale, le convenzioni stipulate nel 2013 dovranno mantenere la quota precedente (2.5\% sul totale), che siano ancora attive nel 2014 o che non lo siano. Da ciò nasce l'esigenza di aggiungere nel contratto un attributo che rappresenta il filler utilizzato e di salvare questa informazione nel database; inoltre, è necessario anche poter effettuare query sul filler stesso. Per questi motivi, nell'implementazione del pattern Strategy si è deciso di utilizzare una classe astratta invece di un'interfaccia.\\
