--- a/Docs/Tesi/lista_interfaccia.tex
+++ b/Docs/Tesi/lista_interfaccia.tex
@@ -15,7 +15,7 @@ Di seguito, segue una spiegazione di ognuno di questi componenti.
 Una schermata di visualizzazione delle convenzioni/contributi è costituita essenzialmente da una tabella, che viene creata mediante il tag \lstinline{pdata:Table} di PrimeFaces. Poiché dovrà gestire grandi quantità di dati, è stata utilizzata la paginazione unita al \textit{lazy loading}: quando viene caricata una pagina, vengono mantenuti in memoria soltanto i contratti che vengono effettivamente visualizzati. Ciò è reso possibile (o, perlomeno, molto più semplice) grazie ai due attributi della \texttt{dataTable} di PrimeFaces \texttt{paginator} e - soprattutto - \texttt{lazy}; sono entrambi attributi booleani che specificano se utilizzare la relativa tecnica.
 
 \subsubsection{Controllore di pagina}
-Associata ad ogni vista, vi è un bean detto \textsl{controllore di pagina}. Esso si occupa di gestire la conversazione necessaria al corretto funzionamento della pagina e di fare da intermediario tra la vista ed il modello, eseguendo le operazioni necessarie per eseguire la navigazione verso le varie schermate dell'applicazione raggiungibili. Il controllore di pagina ha due attributi importanti: il \textit{lazy model}, a cui si può far riferimento dalla pagina (ovviamente), e un \lstinline{ContractManager} che invece si occupa della logica di business, gestendo i contratti (e che non è direttamente accessibile dalla pagina).
+Associata ad ogni vista, vi è un bean detto \textsl{controllore di pagina}. Esso si occupa di gestire la conversazione necessaria al corretto funzionamento della pagina e di fare da intermediario tra la vista ed il modello, eseguendo le operazioni necessarie per eseguire la navigazione verso le varie schermate dell'applicazione raggiungibili. Il controllore di pagina ha due attributi importanti: il \textit{lazy model}, a cui si può far riferimento dalla pagina, e un \lstinline{ContractManager} che invece si occupa della logica di business, gestendo i contratti (e che non è direttamente accessibile dalla pagina).
 
 \subsubsection{\textit{Lazy model}}
 Per creare una tabella \textit{lazy-loaded}, è necessario implementare un \textit{lazy model}, che fornirà la lista di oggetti che verranno infine visualizzati. Il \textit{lazy model} deve inoltre gestire gli eventuali filtri ed ordinamenti richiesti.\\
